--- a/project-new/style.css
+++ b/project-new/style.css
@@ -27,8 +27,8 @@ body {
 
 .circle-container {
   position: fixed;
-  top: -100px;
-  left: -100px;
+  top: 100px;
+  left: 100px;
 }
 
 .circle {
@@ -38,6 +38,10 @@ body {
   border-radius: 50%;
   position: relative;
   transition: transform 0.5s linear;
+}
+
+.container.show-nav .circle {
+  transform: rotate(-70deg);
 }
 
 .circle button {
@@ -66,6 +70,11 @@ body {
   transform-origin: top left;
 }
 
+.container.show-nav + nav li {
+  transform: translateX(0);
+  transition-delay: 0.3s;
+}
+
 nav {
   position: fixed;
   bottom: 40px;
@@ -82,12 +91,23 @@ nav ul li {
   text-transform: uppercase;
   color: #fff;
   margin: 40px 0;
-  /* transform: translateX(-100%); */
+  transform: translateX(-100%);
   transition: transform 0.4s ease-in;
 }
 
 nav ul li i {
-  
+  font-size: 20px;
+  margin-right: 10px;
+}
+
+nav ul li + li {
+  margin-left: 15px;
+  transform: translateX(-150%);
+}
+
+nav ul li + li + li {
+  margin-left: 30px;
+  transform: translateX(-200%);
 }
 
 .content img {
