--- a/project-new/style.css
+++ b/project-new/style.css
@@ -1,11 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: 'Mulish', sans-serif;
+  font-family: 'Lato', sans-serif;
   background-color: #333;
   color: #222;
   overflow-x: hidden;
@@ -89,7 +88,7 @@ nav ul {
 
 nav ul li {
   text-transform: uppercase;
-  color: #fff;
+  color: #e13;
   margin: 40px 0;
   transform: translateX(-100%);
   transition: transform 0.4s ease-in;
