--- a/project-new/style.css
+++ b/project-new/style.css
@@ -51,7 +51,7 @@ body {
   height: 100px;
   background: transparent;
   border: 0;
-  font-size: 20px;
+  font-size: 26px;
   color: #fff;
 }
 
@@ -88,7 +88,7 @@ nav ul {
 
 nav ul li {
   text-transform: uppercase;
-  color: #e13;
+  color: #fff;
   margin: 40px 0;
   transform: translateX(-100%);
   transition: transform 0.4s ease-in;
